src/styles/global.css
/* 글로벌 css 파일 */
@font-face {
    font-family: "AppleSDGothicNeoR";
    src: url(./fonts/AppleSDGothicNeoR.ttf) format("truetype");
    font-display: swap;
}

@font-face {
    font-family: "DungGeunMo";
    src: url(./fonts/DungGeunMo.woff) format("truetype");
    font-display: swap;
}


html {
    --primary-color: #0369a1;
    --secondary-color: #1382b2;
    --fourth-color: #fcf8e8;

    --font-color: rgba(0, 0, 0, 0.8);
    --dark-font-color: rgba(255, 255, 255, 0.83);
    --dark-background-color: #282c35;
}

::selection {
    color: var(--dark-font-color);
    background-color: var(--secondary-color);
}
code.language-text::selection {
    color: var(--font-color);
}

body {
    color: var(--font-color);
}

a {
    transition: all 0.25s;
    color: var(--primary-color);
}
a:hover {
    background-color: var(--primary-color);
    color: white;
}
.dark a {
    color: var(--secondary-color);
}
.dark a:hover {
    background-color: var(--secondary-color);
    color: var(--dark-font-color);
}

code[class*="language-"], pre[class*="language-"] {
    border-radius: 8px;
    font-size: 0.9rem;
    word-break: break-all;
}
.title {
    font-family: 'DungGeunMo';
    color: inherit;
    background-color: inherit;
}
.title:hover {
    color: inherit;
    background-color: inherit;
}
.social {
    text-decoration: none;
    box-shadow: initial;
    border: 1px var(--secondary-color) solid;
    border-radius: 5rem;
    padding: 4px;
    font-size: 12px;
    margin-right: 4px;
}
.navigation-link-wrapper {
    padding: 6px 0px 2px;
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.navigation-link {
    padding: 8px 16px;
    border: 1px var(--secondary-color) solid;
    border-radius: 10px;
    box-shadow: none;
}
.category-tag {
    border: 1px var(--secondary-color) solid;
    color: var(--primary-color);
    border-radius: 15px;
    padding: 4px;
    min-width: 50px;
    margin-right: 4px;
    cursor: default;
}

button.category-tag {
    cursor: pointer;
    outline: none;
    background-color: inherit;
}
button.category-tag:active {
    background-color: var(--secondary-color);
    color: var(--dark-font-color);
}
button.category-tag.active {
    background-color: var(--secondary-color);
    color: var(--dark-font-color);
}
blockquote {
    border-left: 0.32813rem solid var(--primary-color);
    color: inherit;
}


/* width */
::-webkit-scrollbar {
    width: 12px;
    height: 8px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #fff; 
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #d3d3d3; 
    border: 1px solid transparent;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #adadad;
}


/* 다크모드 */
.dark {
    background-color: var(--dark-background-color);
    color: var(--dark-font-color);
}

/* Handle */
.dark ::-webkit-scrollbar-thumb {
    background: #adadad;
    border: 2px solid transparent;
}

/* Handle on hover */
.dark ::-webkit-scrollbar-thumb:hover {
    background: #979797
}

.dark ::-webkit-scrollbar-track {
    background: #d3d3d3; 
}

